<resources>
    <string name="app_name">LCBO Test App</string>
    <string name="filter">Filter</string>
    <string name="has_parking">Has parking</string>
    <string name="has_bilingual_services">Has bilingual services</string>
    <string name="has_wheelchair_accessability">Has wheelchair accessability</string>
    <string name="has_testing_bar">Has testing bar</string>
    <string name="has_beer_cold_room">Has beer cold room</string>
    <string name="stores_filter">Stores filter</string>
    <string name="stores">Stores</string>
    <string name="products">Products</string>
    <string name="search_by_products">Search by products</string>
    <string name="about">About</string>
    <string name="has_vintage_corner">Has vintage corner</string>
    <string name="make_call">Make Call</string>
    <string name="show_products">Show products</string>
    <string name="no_results">No results</string>
    <string name="search">Search</string>
    <string name="is_seasonal">Is seasonal</string>
    <string name="is_kosher">Is kosher</string>
    <string name="has_limited_time_offer">Has limited time offer</string>
    <string name="text_about">This is demo app. \nAuthor: Bezhenar Oleg. </string>
</resources>
