<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <FrameLayout
            android:id="@+id/v_has_parking"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?selectableItemBackground">

            <CheckBox
                android:id="@+id/cb_has_parking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="48dp"
                android:text="@string/has_parking"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/v_has_bilingual_services"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?selectableItemBackground">

            <CheckBox
                android:id="@+id/cb_has_bilingual_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="48dp"
                android:text="@string/has_bilingual_services"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/v_has_wheelchair_accessability"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?selectableItemBackground">

            <CheckBox
                android:id="@+id/cb_has_wheelchair_accessability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="48dp"
                android:text="@string/has_wheelchair_accessability"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/v_has_tasting_bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?selectableItemBackground">

            <CheckBox
                android:id="@+id/cb_has_tasting_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="48dp"
                android:text="@string/has_testing_bar"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/v_has_beer_cold_room"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?selectableItemBackground">

            <CheckBox
                android:id="@+id/cb_has_beer_cold_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="48dp"
                android:text="@string/has_beer_cold_room"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/v_has_vintages_corner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?selectableItemBackground">

            <CheckBox
                android:id="@+id/cb_has_vintages_corner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="48dp"
                android:text="Has vintages courner"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp"/>

        </FrameLayout>


    </LinearLayout>

</ScrollView>